changed the url

--- a/_config.yml
+++ b/_config.yml
@@ -1,6 +1,6 @@
 name: ZeroToDev
 description: A vlog about freelancing and web development created by @amrsekilly
-url: 'http://zero2dev.com'
+url: 'https://zero2dev.com'
 baseurl: ''
 email: contact@zero2dev.com
 twitter: https://twitter.com/ZeroToDev
